--- a/README.org
+++ b/README.org
@@ -4,3 +4,19 @@ A currated list of C concurrency patterns.
 
 Please refer to the comments at the top of each file for details on each pattern.
 
+
+Patterns include:
+
+1. `pthreads.c`: basic threading using `<pthread.h>` library.
+2. `join.c`: basic joining of threads to control threads completion before carrying on.
+3. `mutex.c`: basic program preventing/causing a race condition when mutex is/not applied.
+
+
+** Running
+#+begin_src bash
+  # builds corresponding pattern
+  make run SCRIPT=name-of-script-without-extension
+
+  # builds and runs corresponding pattern
+  make run SCRIPT=name-of-script-without-extension
+#+end_src
